Bug 306145 - SQL Editor's history is not functional
Summary: SQL Editor's history is not functional
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Queries (other bugs)
Version First Reported In: 2.5.1
Platform: unspecified All
: NOR minor
Target Milestone: 2.5
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-01 21:05 UTC by Jarosław Staniek
Modified: 2012-09-02 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-09-01 21:05:03 UTC
SQL Editor's history is not functional. SQL queries are not properly visible on the list. Even if they were presented properly, undo/redo is more widely understood and may be enough for editing. 

The history is a legacy element of Kexi 0.x and shall be removed in 2.6.  Because in 2.5 defect is clearly visible, the feature shall be hidden without removing the i18n'd messages.

Reproducible: Always
Comment 1 Jarosław Staniek 2012-09-02 12:22:29 UTC
Git commit de632b5b6647d1068f8a421292108b1b1fff018f by Jaroslaw Staniek.
Committed on 01/09/2012 at 23:16.
Pushed by staniek into branch 'master'.

Fix bug SQL Editor's history is not functional by removing it in 2.6

Also remove unused code in sql editor.
REVIEW:106309

M  +6    -0    kexi/doc/dev/CHANGELOG-Kexi-js
M  +0    -1    kexi/plugins/queries/CMakeLists.txt
M  +6    -192  kexi/plugins/queries/kexiquerydesignersql.cpp
M  +2    -8    kexi/plugins/queries/kexiquerydesignersql.h
D  +0    -383  kexi/plugins/queries/kexiquerydesignersqlhistory.cpp
D  +0    -114  kexi/plugins/queries/kexiquerydesignersqlhistory.h

http://commits.kde.org/calligra/de632b5b6647d1068f8a421292108b1b1fff018f
Comment 2 Jarosław Staniek 2012-09-02 12:22:58 UTC
Git commit 4b16c4f5caebaea70b32042ce35a9f4186533fe7 by Jaroslaw Staniek.
Committed on 01/09/2012 at 23:16.
Pushed by staniek into branch 'calligra/2.5'.

Fix bug SQL Editor's history is not functional by hiding it in 2.5
REVIEW:106308

M  +5    -0    kexi/doc/dev/CHANGELOG-Kexi-js
M  +5    -2    kexi/plugins/queries/kexiquerydesignersql.cpp

http://commits.kde.org/calligra/4b16c4f5caebaea70b32042ce35a9f4186533fe7