Fix bug SQL Editor's history is not functional by hiding it in 2.5

BUG:306145
REVIEW:106308